--- a/sotera.css
+++ b/sotera.css
@@ -18,10 +18,16 @@ header{
 h1 {
     font-family: otsikko, "sans serif";
     font-size: 35px;
-    color: whitesmoke;
-    text-shadow: 4px 4px black;
+    color: #4a7212;
+    text-shadow: 4px 4px #fff0df;
     text-align: center;
     padding-top: 30px;
+}
+h2 {
+    font-family: ;
+    font-size: ;
+    text-align: ;
+    color:#4a7212;
 }
 
 /*päävalikko*/
@@ -94,7 +100,7 @@ footer{
     padding-bottom: 15px;
 }
 
-/*mobiilikoko*/
+/*mobiili*/
 @media (max-width: 600px) {
 
     footer{
@@ -102,7 +108,7 @@ footer{
         text-align: center;
     }
 
-/*suuri näyttö*/
+/*tietokone*/
 @media screen and (min-width: 1200px) {
     #etusivu {
         background-image: url(kuvat/paakuva-kahvila.jpg);
