--- a/sotera.css
+++ b/sotera.css
@@ -1,33 +1,34 @@
 body {
     color: darkslategray;
     background-color: rgb(255, 235, 205, 0.305);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 16px;
-    margin: 0; /*selain luo automaattisesti pienen marginaalin*/
+    margin: 0;
 }
 
 header{
     text-align: center;
     padding-top: 30px;
 }
-
-@font-face {
-    font-family: otsikko;
-    src: url(fontti/FredokaOne-Regular.ttf);
-}
 h1 {
-    font-family: otsikko, "sans serif";
-    font-size: 35px;
+   font-family: 'palatino linotype','';
+    font-size: 40px;
     color: #4a7212;
     text-shadow: 4px 4px #fff0df;
     text-align: center;
     padding-top: 30px;
 }
 h2 {
-    font-family: ;
-    font-size: ;
-    text-align: ;
+    font-family:'palatino linotype';
+    font-size: 25px ;
+    text-align: left;
     color:#4a7212;
+}
+h3{
+    font-family: 'palatino linotype';
+    font-size: 25px;
+    text-align:left ;
+    color: #4a7212;
 }
 
 /*päävalikko*/
@@ -62,23 +63,6 @@ nav a:hover {
     cursor: pointer;
 }
 
-/*pääsivun sisällön asettelu*/
-.grid-teksti1 { grid-area: g1; }
-.grid-teksti2 { grid-area: g2; }
-.grid-kuva { grid-area: g3; }
-
-.grid-container {
-    display: grid;
-    gap: 20px;
-    padding: 20px;
-}
-
-/*yritys-sivun sisällön asettelu*/
-.grid-henkilo1 { grid-area: g1-h1; }
-.grid-henkilo1-kuva { grid-area: g2-hk1; }
-.grid-henkilo2 { grid-area: g3-h2; }
-.grid-henkilo2-kuva { grid-area: g4-hk2; }
-
 
 table {
     text-align: left;
@@ -109,7 +93,7 @@ footer{
     }
 
 /*tietokone*/
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1920px) {
     #etusivu {
         background-image: url(kuvat/paakuva-kahvila.jpg);
         background-size: cover;
