--- a/sotera.css
+++ b/sotera.css
@@ -6,11 +6,6 @@ body {
     margin: 0;
 }
 
-p {
-    margin: 5% 20% 5% 20% ;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size:20px ;
-}
 
 header{
     text-align: center;
@@ -23,10 +18,6 @@ header{
     justify-content: space-around;
 }
 
-#h2yht {
-    margin: 5% 20% 5% 20% ;  
-}
-/*id avulla saadaan css tiedostossa tehtyä tietylle asialle tietty haluttu*/
 .kuva {
     max-width: 40%;
     vertical-align: middle;
@@ -75,16 +66,30 @@ h3{
     color: #4a7212;
 }
 
+/* tekstejä*/
+
+p {
+    margin: 5% 20% 5% 20% ;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:20px ;
+}
+#h2yht {
+    margin: 5% 20% 5% 20% ;  
+}
+/*id avulla saadaan css tiedostossa tehtyä tietylle asialle tietty haluttu*/
+
 /*päävalikko*/
 nav a {
+   
     background: rgb(220, 188, 173);
-    font-family: otsikko, "sans serif";
+    font-family: otsikko, Arial, Helvetica, sans-serif;
     color:rgb(30, 14, 14);
     text-decoration: none;
     display: inline-block;
     border: 1px solid rgba(87, 54, 4);
 }
 nav a:hover {
+   
     color: rgb(171, 120, 43);
     background-color: whitesmoke;
     background: rgb(220, 188, 173);
@@ -92,7 +97,7 @@ nav a:hover {
 }
 #valittu {
     color:rgb(30, 14, 14);
-    background-color:rgb(234, 223, 157);
+    background-color:rgb(246, 228, 222);
 }
 #etusivu {
 background-image: url(./kuvat/7fdeb446-3866-4d32-98c4-5958930677ef.jpeg);
