--- a/soteria.css
+++ b/soteria.css
@@ -1,15 +1,6 @@
-body {
-    color: darkslategray;
-    background-color: rgb(255, 235, 205, 0.305);
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    margin: 0;
-}
-
-
 header{
     text-align: center;
-    padding-top: 30px;
+
 }
 .alisivu-sisalto {
     margin: 5% 15% 5% 15% ;
@@ -55,14 +46,14 @@ h1 {
 }
 h2 {
     font-family:'palatino linotype';
-    font-size: 25px ;
+    font-size: 25px;
     text-align: center;
     color:#4a7212;
 }
-h3{
+h3 {
     font-family: 'palatino linotype';
     font-size: 25px;
-    text-align:center ;
+    text-align:center;
     color: #4a7212;
 }
 
@@ -79,40 +70,49 @@ p {
 /*id avulla saadaan css tiedostossa tehtyä tietylle asialle tietty haluttu*/
 
 /*päävalikko*/
-nav a {
-   
-    background: rgb(220, 188, 173);
+nav {
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
     font-family: otsikko, Arial, Helvetica, sans-serif;
-    color:rgb(30, 14, 14);
-    text-decoration: none;
-    display: inline-block;
-    border: 1px solid rgba(87, 54, 4);
+    font-size: 20px;
+    text-align: center;
+    color:#122620;
+    font-weight: bold;
+    justify-content: space-evenly;
 }
-nav a:hover {
-   
-    color: rgb(171, 120, 43);
-    background-color: whitesmoke;
-    background: rgb(220, 188, 173);
-    display: inline-block;
+.valikko {
+    width: 100%;
+    height: 20px;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
+.valikko :hover {
+    color: #f8afa6;
 }
 #valittu {
-    color:rgb(30, 14, 14);
-    background-color:rgb(246, 228, 222);
+    color: #122620;
+    background-color: #f8afa6;
+    padding: 1px;
 }
-#etusivu {
-background-image: url(./kuvat/7fdeb446-3866-4d32-98c4-5958930677ef.jpeg);
+#soteria {
+    background-image: url(./kuvat/pilvet2.0.jpg);
+    padding:55px;
+    background-repeat: no-repeat;
 }
 /*valittu saadaan näkyviin, millä sivulla ollaan*/
 
 .toimintakehote {
     border: 2px solid #4a7212;
-    border-radius: 25px;
-    background-color: whitesmoke;
+    border-radius: 20px;
+    background-color: #fff0df;
     font-family: otsikko, "sans serif";
+    font-size:20px;
     color: #4a7212;
-    padding: 10px 32px;
+    padding: 10px 20px;
     text-align: center;
-    text-decoration: none;
+    font-weight:bold;
     display: inline-block;
     margin: 2px 2px;
     cursor: pointer;
@@ -131,7 +131,7 @@ table {
 footer{
     font-family: otsikko, "sans serif";
     font-size: 18px;
-    color: rgba(87, 54, 4);
+    color: #122620;
     background-color: white;
     display: flex;
     justify-content: space-around;
@@ -146,11 +146,11 @@ footer{
         flex-direction: column;
         text-align: center;
     }
-
+}
 /*tietokone*/
 @media screen and (min-width: 1920px) {
     #etusivu {
-        background-image: url(./kuvat/7fdeb446-3866-4d32-98c4-5958930677ef.jpeg);
+        background-image: url(./kuvat/pilvet2.0);
         background-size: cover;
         height: 950px;
     }
@@ -180,3 +180,4 @@ footer{
         width: 100%;
         max-height: 15%;
     }
+}
