--- a/soteria.css
+++ b/soteria.css
@@ -84,7 +84,6 @@ p {
 
 /*päävalikko*/
 nav {
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
     font-family: otsikko, Arial, Helvetica, sans-serif;
     font-size: 20px;
     text-align: center;
@@ -93,16 +92,17 @@ nav {
     justify-content: space-evenly;
 }
 .valikko {
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
     height: 20px;
     list-style-type: none;
     display: flex;
-    justify-content: space-evenly;
     padding: 10px;
 }
 
 .valikko :hover {
     color: #f8afa6;
+    opacity: 1;
 }
 #valittu {
     color: #122620;
