--- a/soteria.css
+++ b/soteria.css
@@ -1,7 +1,3 @@
-body {
-    background-image: url (.kuvat/pilvet1.jpg);
-    
-}
 header{
     text-align: center;
 
@@ -98,47 +94,38 @@ p {
 /*id avulla saadaan css tiedostossa tehtyä tietylle asialle tietty haluttu*/
 
 /*päävalikko*/
-nav {
-    font-family: 'palatino linotype';
-    font-size: 20px;
-    text-align: center;
-    display: inline-block;
-    color:#122620;
-    font-weight: bold;
-    justify-content: space-evenly;
-}
-
 .valikko {
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
-    width: 100%;
+    width: 60%;
+    font-size: 20px;
+    list-style: none;
+    font-weight: bold;
+    text-align: center;
     height: 20px;
-    list-style-type: none;
-    display: flex;
-    padding: 10px;
-
+    display:inline-flex;
+    justify-content:space-between;
+    padding: 15px;
 }
-
 .valikko :hover {
-    color: #f8afa6;
+    color: #f8afa6
+;
 }
 
 #valittu {
     color: #122620;
     background-color: #f8afa6;
-    padding: 1px;
+    padding: 0px;
+    border:10px;
+    text-decoration: wavy;
+    text-align: center;
 }
+
 
 #soteria {
-    background-image: url(./kuvat/pilvet2.0.jpg);
-    padding:55px;
+    background-image: url(./kuvat/pilvet2.jpg);
+    border: 40px;
     background-repeat: no-repeat;
 }
-#etusivu {
-background-image: url(./kuvat/7fdeb446-3866-4d32-98c4-5958930677ef.jpeg);
-background-size: cover;
-
-}
-/*valittu saadaan näkyviin, millä sivulla ollaan*/
 
 .toimintakehote {
     border: 2px solid #4a7212;
@@ -156,9 +143,6 @@ background-size: cover;
     cursor: pointer;
 }
 
-
-.esittely {
-
 table {
     text-align: left;
     padding-top: 20px;
@@ -166,17 +150,15 @@ table {
     padding-left: 0px;
 }
 
-
 /*alatunniste*/
 footer{
-    clear: both;
     font-family: otsikko, "sans serif";
     font-size: 18px;
     color: #122620;
-    background-color: white;
+    background-color: #fff0df;
     display: flex;
     justify-content: space-around;
-    padding-top: 15px;
+    padding-top: 60px;
     padding-bottom: 15px;
 }
 
@@ -196,35 +178,30 @@ footer{
 }
 /*tietokone*/
 @media screen and (min-width: 1920px) {
-    #etusivu {
-        background-image: url(./kuvat/pilvet2.0);
+    #soteria {
+        background-image: url(./kuvat/pilvet2);
         background-size: cover;
-        height: 950px;
     }
-    #alisivut {
-        background-image: url(kuvat/tausta.jpg);
     }
-    nav a { 
+    valikko { 
         font-size: 20px;
-        width: 130px;
-        height: 25px;
         padding: 10px;
-        margin:5px 20px;
     }
     
     #slogan {
-        font-size: 65px;
-        padding-top: 150px;
+        font-size: 40px;
+        padding-top: 15px;
         padding-bottom: 20px;
         padding-left: 200px;
         padding-right: 200px;
     }
-    footer{
-        flex-direction: row;
-        text-align: left;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        max-height: 15%;
+    footer {
+            font-family: otsikko, "sans serif";
+            font-size: 18px;
+            color: #122620;
+            background-color: #fff0df;
+            display: flex;
+            justify-content: space-around;
+            padding-top: 60px;
+            padding-bottom: 15px;
     }
-}
