--- a/soteria.css
+++ b/soteria.css
@@ -30,7 +30,6 @@ header{
   margin: 5%;
    margin-left: 20px;
    float:right;
- 
 }
     
 .grid-teksti {
@@ -127,7 +126,7 @@ a {
     color:#122620;
 }
 #soteria {
-    background-image: url("/kuvat/pilvet2.jpg");
+    background-image: url(./kuvat/pilvet2.jpg);
     padding: 80px;
     background-repeat: no-repeat;
 }
@@ -184,7 +183,7 @@ footer{
 /*tietokone*/
 @media screen and (min-width: 1920px) {
     #soteria {
-        background-image: url("./kuvat/pilvet2");
+        background-image: url(./kuvat/pilvet2);
         background-size: cover;
     }
     }
