--- a/soteria.css
+++ b/soteria.css
@@ -104,18 +104,23 @@ p {
     display:inline-flex;
     justify-content:space-between;
     padding: 15px;
+    text-decoration: ;
 }
 .valikko :hover {
-    color: #f8afa6
-;
+    color: #f8afa6;
 }
 
 #valittu {
-    color: #122620;
-    background-color: #f8afa6;
+    color: #f8afa6;
+    background-color: #fff0df;
     padding: 0px;
-    border:10px;
-    text-align: center;
+    text-decoration-line: underline ;
+    border-style: double;
+    border-width:5px;
+    border-color: #fff0df;
+    border-radius: 25px;
+    border-block-end-width: 30px;
+    
 }
 
 a {
@@ -123,7 +128,7 @@ a {
     text-decoration: none;
 }
 #soteria {
-    background-image: url(./kuvat/pilvet.jpg);
+    background-image: url(./kuvat/pilvet.JPG);
     border: 40px;
     padding: 80px;
     background-repeat: no-repeat;
@@ -181,7 +186,7 @@ footer{
 /*tietokone*/
 @media screen and (min-width: 1920px) {
     #soteria {
-        background-image: url(./kuvat/pilvet);
+        background-image: url(./kuvat/pilvet.JPG);
         background-size: cover;
     }
     }
