--- a/soteria.css
+++ b/soteria.css
@@ -198,6 +198,11 @@ footer{
         font-weight: bold;
 
     }
+    table {
+    text-align: center;
+    padding-top: 10px;
+    margin-left: 10px;
+}
 }
 /*tietokone*/
 @media screen and (min-width: 1920px) {
