--- a/soteria.css
+++ b/soteria.css
@@ -168,7 +168,7 @@ footer{
         .soteria{
         background-image: url(./kuvat/pilvet.JPG);
         background-size: cover;
-        height: 400px
+        height: 300px;
         padding: 10%;
     }
 
@@ -201,8 +201,8 @@ footer{
     
     .valikko {
         box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
-        width: 100px;
-        height: 10px;
+        width: 100%;
+        height: 15px;
         padding: 5px;
         margin: 3px 5px;
         font-size: 15px;
