--- a/soteria.css
+++ b/soteria.css
@@ -25,7 +25,30 @@ header{
    float:left;
    margin-right: 20px;
 }
-
+.satama {
+    width: 35%;
+   height:55%; 
+   float:right;
+   margin-right: 20px;
+}
+.apps {
+    width: 35%;
+    height: 55%;
+    align-content:center;
+    margin-left: 55%;
+}
+.lataa {
+    text-align:right;
+    margin-left:50%;
+}
+.puhelin {
+    width: 35%;
+    height: 55%;
+    float: left;
+    margin: 5% 10% 5% 10%;
+    text-align: right;
+    
+}
 #kartta {
   margin: 5%;
    margin-left: 20px;
@@ -44,9 +67,10 @@ header{
 }
 
 .sisalto {
-    margin: 5% 10% 5% 10% ;
+    margin: 5% 10% 5% 10%;
     flex-direction: row;
     background-color: #fff0df;
+    text-align: left;
 }
 
 /* otsikot*/
@@ -57,7 +81,6 @@ h1 {
     color: #fff0df;
     text-shadow: 2px 2px #4a7212;
     padding-top: 30px;
-
 }
 
 /*fontteja ja font facella saa lisättyä oma lataamia*/
@@ -77,8 +100,14 @@ h3 {
     font-size: 25px;
     text-align:center;
     color: #4a7212;
+    border-top: 30px;
 }
-
+h4 {
+    font-family: 'palatino linotype';
+    font-size: 25px;
+    text-align:left;
+    color: #4a7212;
+}
 /* tekstejä*/
 
 p {
@@ -86,8 +115,8 @@ p {
     font-family: Arial, Helvetica, sans-serif;
     font-size:20px;
 }
-#h2yht {
-    margin: 5% 20% 5% 20%;  
+.staff {
+    text-align: center;
 }
 /*id avulla saadaan css tiedostossa tehtyä tietylle asialle tietty haluttu*/
 
@@ -103,6 +132,8 @@ p {
     display:inline-flex;
     justify-content:space-between;
     padding: 10px;
+    border-right: 60px;
+    margin-right: 50px;
 }
 .valikko :hover {
     color: #f8afa6;
@@ -116,7 +147,6 @@ p {
     border-width: 8px;
     border-radius: 25px;
 }
-
 a {
     color:#122620;
     text-decoration: none;
@@ -150,6 +180,7 @@ table {
     margin-left: 200px;
 }
 
+
 /*alatunniste*/
 footer{
     font-family: otsikko, "sans serif";
@@ -165,10 +196,8 @@ footer{
 /*mobiili*/
 @media (max-width: 600px) {
 
-        .soteria{
-        background-image: url(./kuvat/pilvet.JPG);
+    .soteria{
         background-size: cover;
-        height: 300px;
         padding: 10%;
     }
 
@@ -182,30 +211,35 @@ footer{
         height: 30%;
         margin-right: 20px;
     }
+
+    .satama {
+        width: 100%;
+        height: 30%;
+        margin-left: 20px;
+    }
+
+    .puhelin {
+        width: 100%;
+        height: 30%;
+        margin-right: 20px;
+        float: left;
+    }
        .alisivu-sisalto {
-           width: 100%;
+        width: 100%;
         margin: 5% 5% 5% 5% ;
         flex-direction: column;
         background-color: #fff0df;
         justify-content: center;
         align-items: center;
+        text-align: left;
     }
-     nav {
+     .valikko {
         font-family: otsikko, Arial, Helvetica, sans-serif;
         font-size: 10px;
         text-align: center;
         color:#122620;
         font-weight: bold;
 
-    }
-    
-    .valikko {
-        box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
-        width: 100%;
-        height: 15px;
-        padding: 5px;
-        margin: 3px 5px;
-        font-size: 15px;
     }
     table {
     text-align: center;
@@ -220,18 +254,21 @@ footer{
         background-size: cover;
     }
     }
-    valikko { 
-        font-size: 20px;
-        padding: 10px;
+    .valikko { 
+        box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
+            width: 70%;
+            font-family: 'palatino linotype';
+            font-size: 25px;
+            list-style: none;
+            font-weight: bold;
+            text-align: center;
+            display: inline-flex;
+            justify-content: space-between;
+            padding: 10px;
+            border-right: 60px;
+            margin-right: 50px;
     }
     
-    #slogan {
-        font-size: 40px;
-        padding-top: 15px;
-        padding-bottom: 20px;
-        padding-left: 200px;
-        padding-right: 200px;
-    }
     footer {
             font-family: otsikko, "sans serif";
             font-size: 18px;
@@ -239,6 +276,6 @@ footer{
             background-color: #fff0df;
             display: flex;
             justify-content: space-around;
-            padding-top: 60px;
+            padding-top: 10px;
             padding-bottom: 15px;
     }
