--- a/soteria.css
+++ b/soteria.css
@@ -239,6 +239,7 @@ footer{
         text-align: center;
         color:#122620;
         font-weight: bold;
+        width: 70%;
 
     }
     table {
