--- a/soteria.css
+++ b/soteria.css
@@ -117,6 +117,7 @@ p {
 }
 .staff {
     text-align: center;
+    padding-bottom: 5%;
 }
 /*id avulla saadaan css tiedostossa tehtyä tietylle asialle tietty haluttu*/
 
