--- a/soteria.css
+++ b/soteria.css
@@ -204,6 +204,7 @@ footer{
     footer{
         flex-direction: column;
         text-align: center;
+        padding: top: 40px;
     }
 
     .indexkuva {
