--- a/soteria.css
+++ b/soteria.css
@@ -248,7 +248,7 @@ footer{
         color:#122620;
         background-color: ##fff0df;
         font-weight: bold;
-        width: %;
+        width: 50%;
         padding: 0px 20px;
      }
     table {
