--- a/soteria.css
+++ b/soteria.css
@@ -197,6 +197,9 @@ footer{
 /*mobiili*/
 @media (max-width: 600px) {
 
+    header {
+        padding: 0px;
+    }
     .soteria{
         background-size: cover;
     }
@@ -239,7 +242,6 @@ footer{
         text-align: left;
     }
      .valikko {
-        position: sticky;
         display: flex;
         justify-content:space-between;
         font-family: otsikko, Arial, Helvetica, sans-serif;
@@ -248,8 +250,7 @@ footer{
         color:#122620;
         background-color: ##fff0df;
         font-weight: bold;
-        width: 50%;
-        padding: 0px 20px;
+        padding: 0px;
      }
     table {
     text-align: center;
