--- a/soteria.css
+++ b/soteria.css
@@ -242,11 +242,11 @@ footer{
         text-align: left;
     }
      .valikko {
-         postition: fixed;
+        width: 100%;
         display: flex;
         justify-content:space-between;
         font-family: otsikko, Arial, Helvetica, sans-serif;
-        font-size: 10px;
+        font-size: 20px;
         text-align: center;
         color:#122620;
         background-color: ##fff0df;
